cmake_minimum_required(VERSION 3.23)
project(advent_of_code_2022)

set(CMAKE_CXX_STANDARD 23)

add_executable(1-1 1-1.cpp)
add_executable(1-2 1-2.cpp)
add_executable(2-1 2-1.cpp)
add_executable(2-2 2-2.cpp)
add_executable(3-1 3-1.cpp)
add_executable(3-2 3-2.cpp)
add_executable(4-1 4-1.cpp)
add_executable(4-2 4-2.cpp)
add_executable(5-1 5-1.cpp)
add_executable(5-2 5-2.cpp)
add_executable(6-1 6-1.cpp)
add_executable(6-2 6-2.cpp)
